prevent-deleting-resources/prevent-deleting-deployment/1-policy-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenydeploymentdelete
spec:
  crd:
    spec:
      names:
        kind: K8sDenyDeploymentDelete
        openAPIV3Schema:
          properties:
            deployment:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenydeploymentdelete
         violation[{"msg": msg}]{
          deployment := input.parameters.deployment
          input.review.operation == "DELETE"
          msg := sprintf("Deleting the deployment %v is forbidden", [deployment])
        }
