prevent-deleting-resources/prevent-deleting-deployment/2-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyDeploymentDelete
metadata:
  name: k8sdenydeploymentdelete
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    deployment: "busybox"
